k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: msc-de1-project
  labels:
    app.kubernetes.io/part-of: msc-de1-project
    # Pod Security Admission : baseline impose, restricted en avertissement/audit
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
