k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: msc-de1-project
  labels:
    app.kubernetes.io/name: flask-app
    app.kubernetes.io/part-of: msc-de1-project
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: flask-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
